--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="header">
@@ -60,3 +61,4 @@
 </footer>
 </body>
 </html>
+
